--- a/polis_app/src/App.css
+++ b/polis_app/src/App.css
@@ -76,6 +76,7 @@ a:link, :visited {
 
 
 .event-title{
+  font-size: 15px;
   font-family: Roboto;
 }
 
@@ -96,7 +97,7 @@ a:link, :visited {
   color: white;
 
   margin-top: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 25px;
   margin-left: 15px;
   margin-right: 15px;
 
@@ -104,22 +105,19 @@ a:link, :visited {
 
   padding-left: 20px;
   
-  height: 150px;
-
-  z-index: 2;
-
+  height: 100px;
 }
 
 .postImg{
   filter: blur(1.5px);
   float: right;
-  width: 120px;
+  width: 80px;
   height: 100%;
-  border:none
+  
+  border:none;
+  background-size:cover;
+
 }
-
-
-
 
 .App {
   text-align: center;
