--- a/polis_app/src/App.css
+++ b/polis_app/src/App.css
@@ -9,31 +9,18 @@ body{
   background: #231F20;
   caret-color: azure;
   color: white;
-  border: none;
+  border: 2px solid white;
   border-radius: 5px;
   padding: 10px 5px;
 
-  margin-bottom: 10px;
-  margin-top: 45px;
+  margin-bottom: 30px;
+  margin-top: 40px;
   margin-left: 5px;
   margin-right: 5px;
 
   vertical-align: middle;
   width:  300px;
 }
-
-.navbarTop{
-  background-color:  #222;
-  vertical-align: top;
-  color:white;
-  height: 60px;
-  }
-
-#NavTitle{
-  font-size: 15px;
-  text-shadow: black 5px;
-}
-
 
 
 .PostItems{
@@ -48,12 +35,7 @@ body{
 }
 
 /* this might make problems later */
-h2{ 
-  margin: 0;
-  padding-top: 20px;
-  text-align: center;
 
-}
 
 a:link, :visited {
   -webkit-text-stroke: 0.1px black;
@@ -102,10 +84,11 @@ a:link, :visited {
   margin-right: 15px;
 
   border-radius: 20px;
-
+  box-shadow: 10px 5px 5px yellow;
   padding-left: 20px;
-  
-  height: 100px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  height: 120px;
 }
 
 .postImg{
@@ -116,7 +99,8 @@ a:link, :visited {
   
   border:none;
   background-size:cover;
-
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .App {
