--- a/polis_app/src/App.css
+++ b/polis_app/src/App.css
@@ -69,6 +69,30 @@ a:link, :visited {
   margin: 0;
 }
 
+.sliderEvent{
+  padding: 0;
+  margin: 0;
+  margin-top: 15%;
+  background-color: #37383a7c;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  text-shadow: 5px 5px rgba(0, 0, 0, 0.657);
+
+}
+
+.SliderTitle{
+
+  size: 55px;
+
+}
+
+/* Might make problems */
+hr{
+  width: 80%;
+}
+
 /* summary of event in items */
 
 .event-summary{
