--- a/polis_app/src/App.css
+++ b/polis_app/src/App.css
@@ -115,7 +115,7 @@ hr{
   border: 1px solid rgb(0, 0, 0);
 
   /* //Why the fuck was this yellow btw? */
-  box-shadow: 10px 5px rgb(0, 0, 0);
+  box-shadow: 10px 5px rgba(0, 0, 0, 0.753);
   padding-left: 20px;
   padding-top: 1px;
   padding-bottom: 1px;
