--- a/polis_app/src/components/Navbar/Navbar.css
+++ b/polis_app/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .NavbarItems {
     background-color: #1e2b38;
     background-image:url('../Img/topography.svg');
-      height: 80px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,6 +9,7 @@
 }
 
 .navbar-logo {
+    
     color: #fff;
     justify-self: start;
     margin-left: 20px;
@@ -18,6 +19,12 @@
 .fa-react {
     margin-left: 0.5rem;
     font-size: 1.6rem;
+}
+
+/* FIX THIS */
+#logo{
+    background-image: url(../Img/nti_logo.svg);
+    width: 25px;
 }
 
 .nav-menu {
