--- a/polis_app/src/components/Navbar/Navbar.css
+++ b/polis_app/src/components/Navbar/Navbar.css
@@ -76,13 +76,13 @@
         height: 500px;
         position: absolute;
         top: -20px;
-        left: -100%;
+        left: -110%;
         opacity: 1;
         transition: all 0.5s ease;
     }
     .nav-menu.active {
         background: #6668f4;
-        left: 0;
+        left: -40px;
         opacity: 1;
         transition: all 0.5s ease;
         z-index: 1;
