--- a/polis_app/src/components/Navbar/Navbar.css
+++ b/polis_app/src/components/Navbar/Navbar.css
@@ -14,6 +14,9 @@
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
+    
+    -webkit-text-stroke-width: 1.5px;
+    -webkit-text-stroke-color: black;
 }
 
 .fa-react {
@@ -81,7 +84,7 @@
         transition: all 0.5s ease;
     }
     .nav-menu.active {
-        background: #6668f4;
+        background: #152238;
         left: -40px;
         opacity: 1;
         transition: all 0.5s ease;
@@ -124,14 +127,14 @@
         margin: 2rem auto;
         border-radius: 4px;
         width: 80%;
-        background-color: aqua;
+        background-color: #222;
         text-decoration: none;
         color: #fff;
         font-size: 1.5rem;
     }
     .nav-links-mobile:hover {
         background: #fff;
-        color: #6568f4;
+        color: #000;
         transition: 250ms;
     }
     Button {
