--- a/polis_app/src/components/Slider/Button.css
+++ b/polis_app/src/components/Slider/Button.css
@@ -1,5 +1,6 @@
 :root {
-    --primary: #3acbf7;
+    --primary: white;
+
 }
 
 .btn {
@@ -8,13 +9,14 @@
     outline: none;
     border: none;
     cursor: pointer;
+    color: #1e2b38;
 }
 
 .btn:hover {
     padding: 8px 20px;
     transition: all 0.3s ease-out;
     background: #fff;
-    color: #6568f4;
+    color: grey;
     transition: 250ms;
 }
 
@@ -24,7 +26,7 @@
 
 .btn--outline {
     background-color: transparent;
-    color: #fff;
+    color:  #1e2b38;;
     padding: 8x 20px;
     border-radius: 4px;
     border: 1px solid var(--primary);
@@ -35,12 +37,13 @@
     padding: 8px 20px;
     border-radius: 4px;
     font-size: 18px;
-    color: #fff;
+    color: #1e2b38;
+    margin: 20px;
 }
 
 .btn--large {
     padding: 12px 26px;
     border-radius: 4px;
     font-size: 20px;
-    color: #fff;   
+    
 }
