--- a/polis_app/src/components/Slider/Button.css
+++ b/polis_app/src/components/Slider/Button.css
@@ -8,6 +8,7 @@
     outline: none;
     border: none;
     cursor: pointer;
+    
 }
 
 .btn:hover {
@@ -25,7 +26,7 @@
 .btn--outline {
     background-color: transparent;
     color: #fff;
-    padding: 8x 20px;
+    padding: 8px 20px;
     border-radius: 4px;
     border: 1px solid var(--primary);
     transition: all 0.3s ease-out;
