--- a/polis_app/src/components/Navbar/Navbar.css
+++ b/polis_app/src/components/Navbar/Navbar.css
@@ -30,20 +30,19 @@
 }
 
 .nav-menu {
-    display: grid;
-    grid-template-columns: repeat(5, auto);
-    grid-gap: 10px;
-    list-style: none;
-    align-content: center;
+    
+    
     width: 70vw;
     /* justify-content: end; dont see the point of this */
     margin-right: 2rem;
+    
 }
 
 .nav-links {
     color: #fff;
     text-decoration: none;
     padding: 0.5rem 1rem;
+   
 }
 
 .nav-links:hover {
@@ -77,12 +76,13 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 500px;
+        
         position: absolute;
         top: -20px;
-        left: -110%;
+        left: -111%;
         opacity: 1;
         transition: all 0.5s ease;
+        padding-top: 70px;
     }
     .nav-menu.active {
         background-color: #152238;
